--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,18 @@
 
+body {
+
+}
 /* Campuses */
-.campus-container img {
-  width: 50%;
+.campus-container {
+  display: flex;
+  flex-flow: row wrap;
+}
+.campus-item {
+  border: 4px solid #F95738;
+  padding: 15px;
+  width: 300px;
+  margin: 10px auto;
+}
+.campus-item img {
+  max-width: 100%;
 }
