--- a/public/styles.css
+++ b/public/styles.css
@@ -54,8 +54,27 @@ body {
 }
 
 /* Forms */
-.form-container {
+.form-container form {
   padding: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.form-group {
+  padding: 5px;
+}
+.form-label {
+  margin: 5px;
+}
+.form-input {
+
+}
+.form-select {
+
+}
+.form-button {
+
 }
 
 /* Campuses */
