--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,16 @@
 body {
   font-family: 'Jura', cursive;
   margin: 0;
+  color: #083D77;
+}
+a {
+  color: #083D77;
+}
+a:visited {
+  color: #083D77;
+}
+a:hover {
+  color: #F95738;
 }
 .padded-container {
   padding: 8px;
@@ -55,7 +65,16 @@ body {
 
 /* Forms */
 .form-container form {
-  padding: 15px;
+  text-align: center;
+  border: 2px solid #F4D35E;
+  background-color: #EBEBD3;
+  padding: 12px;
+  margin-bottom: 8px;
+}
+.form-container form h3 {
+  margin: 0px 0 8px;
+}
+.form-inner {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -76,21 +95,59 @@ body {
 .form-button {
 
 }
+.student-button, .campus-button {
+  background-color: #F95738;
+  color: white;
+  border: none;
+  margin: 5px;
+}
 
 /* Campuses */
 .campus-container {
   display: flex;
   flex-flow: row wrap;
 }
+.campus-container a {
+  height: 100%;
+  width: 100%;
+}
+.link-box {
+  height: 225px;
+  width: 100%;
+}
+.link-box h3 {
+  margin: 0;
+  line-height: 50px;
+  font-size: 25px;
+}
 .campus-item {
-  border: 2px solid #F95738;
-  padding: 15px;
+  text-align: center;
+  border: 2px solid #083D77;
+  background-color: #EBEBD3;
   width: 300px;
+  height: 260px;
   margin: 10px auto;
-  box-shadow: 2px 3px 3px 1px rgba(0, 0, 0, .3);
+  box-shadow: 2px 3px 3px 1px rgba(255, 255, 255, .3);
+  overflow: none;
 }
 .campus-item img {
-  max-width: 100%;
+  border-top: 2px solid #083D77;
+  border-bottom: 2px solid #083D77;
+  width: 100%;
+  height: 175px;
+}
+.campus-button {
+  border-top: 2px solid #083D77;
+  background-color: #083D77;
+  color: white;
+  border: none;
+  margin: 0;
+  width: 100%;
+  height: 35px;
+}
+.campus-button:hover {
+  cursor: pointer;
+  background-color: #F95738;
 }
 
 /* Single Campus */
