--- a/public/styles.css
+++ b/public/styles.css
@@ -83,14 +83,14 @@ button {
   left: 0;
   top: 0;
   height: calc(100vh - 78px);
-  width: 100%;
+  width: 100vw;
   background-color: rgba(255, 255, 255, 0.4);
   z-index: 1;
 }
 #home-container video {
   position: relative;
-  min-width: 100vw;
-  height: calc(100vh - 78px);
+  /* height: calc(100vh - 78px); */
+  width: 100vw;
 }
 
 /* Forms */
